--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -34,8 +34,8 @@ selected_bottom_panel_item=1
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/beings/Being.gd", "res://scripts/beings/states/EatState.gd", "res://scripts/GameManager.gd", "res://scripts/beings/states/MoveState.gd"]
-selected_script="res://scripts/beings/states/MoveState.gd"
+open_scripts=["res://scripts/beings/Being.gd", "res://scripts/beings/states/EatState.gd", "res://scripts/GameManager.gd", "res://scripts/beings/states/IdleState.gd", "res://scripts/beings/states/MoveState.gd"]
+selected_script="res://scripts/beings/states/IdleState.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
