--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -46,4 +46,10 @@ list=Array[Dictionary]([{
 "icon": "",
 "language": &"GDScript",
 "path": "res://quests/QuestManager.gd"
+}, {
+"base": &"RefCounted",
+"class": &"Task",
+"icon": "",
+"language": &"GDScript",
+"path": "res://scripts/beings/states/Task.gd"
 }])
