trying to order tasks in an array

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -12,6 +12,12 @@ list=Array[Dictionary]([{
 "path": "res://scripts/beings/states/BeingState.gd"
 }, {
 "base": &"RefCounted",
+"class": &"ComplexTask",
+"icon": "",
+"language": &"GDScript",
+"path": "res://scripts/beings/states/ComplexTask.gd"
+}, {
+"base": &"RefCounted",
 "class": &"Condition",
 "icon": "",
 "language": &"GDScript",
