--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -27,15 +27,15 @@ dock_5="Inspector,Node,History"
 
 open_scenes=PackedStringArray("res://scenes/globals/quest_manager.tscn", "res://scenes/globals/game_manager.tscn", "res://scenes/main_scene.tscn", "res://scenes/being_scene.tscn", "res://scenes/positions/position_scene.tscn", "res://scenes/GameObjects/gameObject_scene.tscn")
 current_scene="res://scenes/main_scene.tscn"
-center_split_offset=0
+center_split_offset=-718
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-selected_bottom_panel_item=1
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/beings/Being.gd", "res://scripts/beings/states/EatState.gd", "res://scripts/GameManager.gd", "res://scripts/beings/states/IdleState.gd", "res://scripts/beings/states/MoveState.gd"]
-selected_script="res://scripts/beings/states/IdleState.gd"
+open_scripts=["res://scripts/beings/Being.gd", "res://scripts/beings/states/EatState.gd", "res://scripts/GameManager.gd", "res://scripts/beings/states/GatherState.gd", "res://scripts/beings/states/IdleState.gd", "res://scripts/beings/states/MoveState.gd"]
+selected_script="res://scripts/beings/states/GatherState.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
