there was no loop, just no resources of type Wood. Deliver worsks now, but logic for gameobjects to recieve and remove resources and eventually disappear needs to be added

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -34,8 +34,8 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/beings/Being.gd", "res://scripts/beings/states/EatState.gd", "res://scripts/GameManager.gd", "res://scripts/beings/states/GatherState.gd", "res://scripts/beings/states/IdleState.gd", "res://scripts/beings/states/MoveState.gd"]
-selected_script="res://scripts/beings/states/GatherState.gd"
+open_scripts=["res://scripts/beings/Being.gd", "res://scripts/beings/states/DeliverState.gd", "res://scripts/beings/states/EatState.gd", "res://scripts/GameManager.gd", "res://scripts/beings/states/GatherState.gd", "res://scripts/beings/states/IdleState.gd", "res://scripts/beings/states/MoveState.gd"]
+selected_script="res://scripts/beings/states/DeliverState.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
