Mating is in now. Also gather keeps track of target.

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -12,12 +12,6 @@ list=Array[Dictionary]([{
 "path": "res://scripts/beings/states/BeingState.gd"
 }, {
 "base": &"RefCounted",
-"class": &"ComplexTask",
-"icon": "",
-"language": &"GDScript",
-"path": "res://scripts/beings/states/ComplexTask.gd"
-}, {
-"base": &"RefCounted",
 "class": &"Condition",
 "icon": "",
 "language": &"GDScript",
@@ -40,6 +34,12 @@ list=Array[Dictionary]([{
 "icon": "",
 "language": &"GDScript",
 "path": "res://scripts/beings/population/Population.gd"
+}, {
+"base": &"RefCounted",
+"class": &"Pregnancy",
+"icon": "",
+"language": &"GDScript",
+"path": "res://scripts/beings/Pregnancy.gd"
 }, {
 "base": &"Node2D",
 "class": &"Quest",
