--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
@@ -17,7 +17,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scripts/positions/PositionsNode.gd")
+dock_filesystem_selected_paths=PackedStringArray("res://icon.svg")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scripts/positions/", "res://scripts/globals/", "res://scripts/beings/states/", "res://scenes/", "res://scenes/globals/", "res://quests/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -27,15 +27,15 @@ dock_5="Inspector,Node,History"
 
 open_scenes=PackedStringArray("res://scenes/globals/quest_manager.tscn", "res://scenes/globals/game_manager.tscn", "res://scenes/main_scene.tscn", "res://scenes/being_scene.tscn", "res://scenes/positions/position_scene.tscn", "res://scenes/GameObjects/gameObject_scene.tscn")
 current_scene="res://scenes/main_scene.tscn"
-center_split_offset=-718
+center_split_offset=-252
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/beings/Being.gd", "res://scripts/beings/states/DeliverState.gd", "res://scripts/beings/states/EatState.gd", "res://scripts/GameManager.gd", "res://scripts/beings/states/GatherState.gd", "res://scripts/beings/states/IdleState.gd", "res://scripts/beings/states/MoveState.gd"]
-selected_script="res://scripts/beings/states/DeliverState.gd"
+open_scripts=["res://scripts/beings/Being.gd", "res://scripts/beings/states/IdleState.gd"]
+selected_script="res://scripts/beings/Being.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
