Trying to display things on hud

--- a/.godot/scene_groups_cache.cfg
+++ b/.godot/scene_groups_cache.cfg
@@ -1,3 +1,3 @@
 [res://scenes/main_scene.tscn]
 
-groups=[&"QuestManager", &"PositionsNode"]
+groups=[&"QuestManager", &"PositionsNode", &"LabelNode"]
