--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,8 +17,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scripts/")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scripts/beings/states/", "res://scenes/globals/", "res://scenes/GameObjects/", "res://quests/")
+dock_filesystem_selected_paths=PackedStringArray("res://scripts/utilities/CameraMovement.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scripts/utilities/", "res://scripts/beings/states/", "res://scenes/globals/", "res://scenes/GameObjects/", "res://quests/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -30,12 +30,12 @@ current_scene="res://scenes/main_scene.tscn"
 center_split_offset=-252
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-selected_bottom_panel_item=0
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/beings/Being.gd", "res://scripts/GameManager.gd", "res://scripts/beings/states/MoveState.gd"]
-selected_script="res://scripts/beings/Being.gd"
+open_scripts=["res://scripts/beings/Being.gd", "res://scripts/GameManager.gd", "res://scripts/beings/states/MoveState.gd", "res://quests/Quest.gd"]
+selected_script="res://quests/Quest.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
