houses can be build. not seen though. some error when trying to display tasks of beings

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -29,7 +29,7 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://scripts/GameObject.gd"
 }, {
-"base": &"RefCounted",
+"base": &"Node2D",
 "class": &"Population",
 "icon": "",
 "language": &"GDScript",
