--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,16 +17,16 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scripts/utilities/CameraMovement.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scripts/utilities/", "res://scripts/beings/states/", "res://scenes/globals/", "res://scenes/GameObjects/", "res://quests/")
+dock_filesystem_selected_paths=PackedStringArray("res://scripts/beings/population/Population.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://scripts/", "res://scripts/beings/", "res://scripts/beings/population/", "res://scenes/", "res://scenes/GameObjects/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/globals/quest_manager.tscn", "res://scenes/globals/game_manager.tscn", "res://scenes/main_scene.tscn", "res://scenes/positions/position_scene.tscn", "res://scenes/GameObjects/gameObject_scene.tscn", "res://scenes/being_scene.tscn")
-current_scene="res://scenes/main_scene.tscn"
+open_scenes=PackedStringArray("res://scenes/globals/quest_manager.tscn", "res://scenes/globals/game_manager.tscn", "res://scenes/main_scene.tscn", "res://scenes/positions/position_scene.tscn", "res://scenes/GameObjects/gameObject_scene.tscn", "res://scenes/being_scene.tscn", "res://scenes/GameObjects/population_scene.tscn")
+current_scene="res://scenes/GameObjects/population_scene.tscn"
 center_split_offset=-252
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
@@ -34,8 +34,8 @@ selected_bottom_panel_item=1
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/beings/Being.gd", "res://scripts/GameManager.gd", "res://scripts/beings/states/MoveState.gd", "res://quests/Quest.gd"]
-selected_script="res://quests/Quest.gd"
+open_scripts=["res://scripts/beings/Being.gd", "res://scripts/beings/states/BuildState.gd", "res://scripts/GameManager.gd", "res://scripts/beings/states/IdleState.gd", "res://scripts/beings/states/MoveState.gd", "res://scripts/beings/population/Population.gd", "res://quests/Quest.gd"]
+selected_script="res://scripts/beings/states/BuildState.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
@@ -50,10 +50,10 @@ text_shader_zoom_factor=1.0
 
 [editor_log]
 
-log_filter_0=false
-log_filter_2=false
+log_filter_0=true
+log_filter_2=true
 log_filter_1=true
-log_filter_3=false
+log_filter_3=true
 log_filter_4=true
 collapse=false
 show_search=true
