started on beingdata class

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -6,6 +6,12 @@ list=Array[Dictionary]([{
 "path": "res://scripts/beings/Being.gd"
 }, {
 "base": &"RefCounted",
+"class": &"BeingData",
+"icon": "",
+"language": &"GDScript",
+"path": "res://scripts/beings/BeingData.gd"
+}, {
+"base": &"RefCounted",
 "class": &"BeingState",
 "icon": "",
 "language": &"GDScript",
