fixing resource handling

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -33,7 +33,7 @@ list=Array[Dictionary]([{
 "class": &"GameObject",
 "icon": "",
 "language": &"GDScript",
-"path": "res://scripts/GameObject.gd"
+"path": "res://scripts/utilities/GameObjects/GameObject.gd"
 }, {
 "base": &"Node2D",
 "class": &"Population",
@@ -58,6 +58,12 @@ list=Array[Dictionary]([{
 "icon": "",
 "language": &"GDScript",
 "path": "res://quests/QuestManager.gd"
+}, {
+"base": &"RefCounted",
+"class": &"ResourceData",
+"icon": "",
+"language": &"GDScript",
+"path": "res://scripts/utilities/GameObjects/ResourceData.gd"
 }, {
 "base": &"RefCounted",
 "class": &"Task",
