--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -25,17 +25,17 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/globals/quest_manager.tscn", "res://scenes/globals/game_manager.tscn", "res://scenes/main_scene.tscn", "res://scenes/positions/position_scene.tscn", "res://scenes/GameObjects/gameObject_scene.tscn", "res://scenes/being_scene.tscn", "res://scenes/GameObjects/population_scene.tscn")
-current_scene="res://scenes/main_scene.tscn"
+open_scenes=PackedStringArray("res://scenes/globals/quest_manager.tscn", "res://scenes/globals/game_manager.tscn", "res://scenes/main_scene.tscn", "res://scenes/positions/position_scene.tscn", "res://scenes/being_scene.tscn", "res://scenes/GameObjects/population_scene.tscn")
+current_scene="res://scenes/GameObjects/population_scene.tscn"
 center_split_offset=-288
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-selected_bottom_panel_item=0
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/beings/Being.gd", "res://scripts/beings/states/BuildState.gd", "res://scripts/beings/states/DeliverState.gd", "res://scripts/GameManager.gd", "res://scripts/beings/states/IdleState.gd", "res://scripts/beings/states/MoveState.gd", "res://scripts/beings/population/Population.gd", "res://quests/Quest.gd"]
-selected_script="res://scripts/GameManager.gd"
+open_scripts=["res://scripts/beings/Being.gd", "res://scripts/beings/states/DeliverState.gd", "res://scripts/beings/states/EatState.gd", "res://scripts/GameManager.gd"]
+selected_script="res://scripts/beings/Being.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
