A bunch more changes. but now resources are removed from resouces if <= 0, also cant collect resources from other beings or target of a deliver task. Have to add comsumables as scenes

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -17,6 +17,12 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://scripts/beings/states/BeingState.gd"
 }, {
+"base": &"GameObject",
+"class": &"Building",
+"icon": "",
+"language": &"GDScript",
+"path": "res://scripts/utilities/GameObjects/Building.gd"
+}, {
 "base": &"RefCounted",
 "class": &"Condition",
 "icon": "",
