--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
@@ -17,16 +17,16 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scripts/beings/states/Tasks/Task.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://scripts/", "res://scripts/beings/", "res://scripts/beings/states/", "res://scripts/beings/states/Tasks/", "res://scenes/")
+dock_filesystem_selected_paths=PackedStringArray("res://scripts/utilities/GameObjects/Consumable.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://scripts/", "res://scripts/utilities/", "res://scripts/utilities/GameObjects/", "res://scripts/beings/", "res://scripts/beings/states/", "res://scripts/beings/states/Tasks/", "res://scenes/", "res://scenes/GameObjects/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/globals/quest_manager.tscn", "res://scenes/globals/game_manager.tscn", "res://scenes/main_scene.tscn", "res://scenes/positions/position_scene.tscn", "res://scenes/being_scene.tscn", "res://scenes/GameObjects/population_scene.tscn")
-current_scene="res://scenes/GameObjects/population_scene.tscn"
+open_scenes=PackedStringArray("res://scenes/globals/quest_manager.tscn", "res://scenes/globals/game_manager.tscn", "res://scenes/main_scene.tscn", "res://scenes/positions/position_scene.tscn", "res://scenes/being_scene.tscn", "res://scenes/GameObjects/population_scene.tscn", "res://scenes/GameObjects/gameObject_scene.tscn", "res://scenes/GameObjects/consumable_scene.tscn")
+current_scene="res://scenes/GameObjects/consumable_scene.tscn"
 center_split_offset=-288
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
@@ -35,7 +35,7 @@ selected_bottom_panel_item=1
 [ScriptEditor]
 
 open_scripts=["res://scripts/beings/Being.gd", "res://scripts/beings/states/BuildState.gd", "res://scripts/beings/states/DeliverState.gd", "res://scripts/beings/states/EatState.gd", "res://scripts/GameManager.gd", "res://scripts/utilities/GameObjects/GameObject.gd", "res://scripts/beings/population/Population.gd"]
-selected_script="res://scripts/utilities/GameObjects/GameObject.gd"
+selected_script="res://scripts/beings/population/Population.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
