Trying to implement socializing and new search task

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -34,8 +34,8 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/beings/Being.gd", "res://scripts/beings/states/BuildState.gd", "res://scripts/beings/states/DeliverState.gd", "res://scripts/beings/states/EatState.gd", "res://scripts/GameManager.gd", "res://scripts/utilities/GameObjects/GameObject.gd", "res://scripts/beings/population/Population.gd"]
-selected_script="res://scripts/utilities/GameObjects/GameObject.gd"
+open_scripts=[]
+selected_script=""
 open_help=[]
 script_split_offset=70
 list_split_offset=0
