--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -41,6 +41,12 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://scripts/utilities/GameObjects/GameObject.gd"
 }, {
+"base": &"Object",
+"class": &"Personality",
+"icon": "",
+"language": &"GDScript",
+"path": "res://scripts/beings/Personality.gd"
+}, {
 "base": &"Node2D",
 "class": &"Population",
 "icon": "",
