--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -30,12 +30,12 @@ current_scene="res://scenes/GameObjects/depletable_scene.tscn"
 center_split_offset=-288
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-selected_bottom_panel_item=1
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/beings/Being.gd", "res://scripts/beings/states/SearchState.gd", "res://scripts/beings/states/SocializeState.gd"]
-selected_script="res://scripts/beings/states/SocializeState.gd"
+open_scripts=[]
+selected_script=""
 open_help=[]
 script_split_offset=70
 list_split_offset=0
