making events and momories

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -72,6 +72,12 @@ list=Array[Dictionary]([{
 "path": "res://quests/QuestManager.gd"
 }, {
 "base": &"RefCounted",
+"class": &"Relation",
+"icon": "",
+"language": &"GDScript",
+"path": "res://scripts/beings/relations/Relation.gd"
+}, {
+"base": &"RefCounted",
 "class": &"ResourceData",
 "icon": "",
 "language": &"GDScript",
